--- a/pandas tutorial.ipynb
+++ b/pandas tutorial.ipynb
@@ -34,7 +34,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"../datasets/diabetes.csv\")\n",
+    "df = pd.read_csv(\"datasets/diabetes.csv\")\n",
     "df.head()"
    ]
   },
